# qnv

./: .gitignore  CMakeLists.txt  README.md  installer.wxs  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makeinstaller.bat  notes.cpp  notes.h  qnv.pro  resources.qrc
src/: CMakeLists.txt  main.cc  mainwindow.cc  mainwindow.h  mainwindow.ui  notes.cc  notes.h
